@@ -1,3 +1,9 @@
+2001-05-22  Alex Samuel  <samuel@codesourcery.com>
+
+	* doc/qm.mod: Add note.
+	* doc/manual/test-manual.xml: Corrections.
+	* doc/manual/test-tour.xml: Likewise.
+
 2001-05-21  Alex Samuel  <samuel@codesourcery.com>
 
 	* qm/common.py (print_message): New function.
